--- a/doc/manual.css
+++ b/doc/manual.css
@@ -1,5 +1,5 @@
 /* gapdoc.css        Frank Lübeck */
-/* $Id: manual.css,v 1.2 2007/03/14 01:32:14 alexk Exp $  */
+/* $Id$  */
 
 
 /* basic settings */
